[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/tile001.png" type="Texture" id=1]
[ext_resource path="res://World/Shop_Detection.gd" type="Script" id=2]
[ext_resource path="res://World/tile000.png" type="Texture" id=3]
[ext_resource path="res://World/tile003.png" type="Texture" id=4]
[ext_resource path="res://World/tile002.png" type="Texture" id=5]
[ext_resource path="res://World/Flashlight.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/theshopSound.gd" type="Script" id=7]
[ext_resource path="res://Sounds/heli.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 190.36

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 35.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 539.256

[node name="TheShop" type="StaticBody2D"]
z_index = 6

[node name="Flashlight" parent="." instance=ExtResource( 6 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="DetectionArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 5.19131, 6.74295 )
scale = Vector2( 3.09825, 3.09825 )
frames = SubResource( 2 )

[node name="Sound" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sound"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 8 )
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Sound" to="Sound" method="_on_Sound_body_entered"]
[connection signal="body_exited" from="Sound" to="Sound" method="_on_Sound_body_exited"]
